
INCLUDES = -I$(top_srcdir)/Cayuga/ -I$(top_srcdir)/Cayuga/inc/BasicDataStructure/Automaton		\
-I$(top_srcdir)/extlib/inc 

noinst_LTLIBRARIES = libAutomaton.la

libAutomaton_la_SOURCES = Edge.cpp FilterEdge.cpp ForwardEdge.cpp Instance.cpp InstanceFinder.cpp IntermediateNode.cpp Node.cpp Query.cpp RebindEdge.cpp StartNode.cpp
